--- a/login.html
+++ b/login.html
@@ -1,141 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Smart Burme - Login</title>
+  <meta charset="UTF-8">
+  <title>Login</title>
   <style>
-    * {
+    body {
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      height: 100vh;
-      background: linear-gradient(-45deg, #0d0d0d, #1a1a1a, #000000, #262626);
-      background-size: 400% 400%;
-      animation: backgroundShift 12s ease infinite;
-      font-family: 'Segoe UI', sans-serif;
-      color: white;
+      background: linear-gradient(135deg, #ff6b6b, #f8e473);
+      font-family: Arial, sans-serif;
       display: flex;
-      align-items: center;
+      flex-direction: column;
       justify-content: center;
-    }
-
-    @keyframes backgroundShift {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
+      align-items: center;
+      height: 100vh;
+      overflow: hidden;
     }
 
     .login-box {
-      background-color: rgba(0, 0, 0, 0.7);
-      padding: 40px;
+      background: rgba(255, 255, 255, 0.9);
+      padding: 30px;
       border-radius: 20px;
-      box-shadow: 0 0 25px rgba(0, 204, 255, 0.3);
-      width: 90%;
-      max-width: 400px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+      animation: float 3s ease-in-out infinite;
     }
 
-    .title {
-      font-size: 36px;
-      font-weight: bold;
-      margin-bottom: 20px;
-      animation: float3D 4s ease-in-out infinite, colorChange 6s infinite alternate;
-    }
-
-    @keyframes float3D {
-      0% { transform: rotateY(0deg) translateY(0); }
-      25% { transform: rotateY(10deg) translateY(-10px); }
-      50% { transform: rotateY(0deg) translateY(0); }
-      75% { transform: rotateY(-10deg) translateY(10px); }
-      100% { transform: rotateY(0deg) translateY(0); }
-    }
-
-    @keyframes colorChange {
-      0% { color: #a0a0a0; }
-      50% { color: #00ccff; }
-      100% { color: #cccccc; }
+    @keyframes float {
+      0% { transform: translateY(0); }
+      50% { transform: translateY(-10px); }
+      100% { transform: translateY(0); }
     }
 
     input {
-      width: 100%;
-      padding: 12px;
+      display: block;
       margin: 10px 0;
+      padding: 10px;
+      width: 100%;
       border: none;
-      border-radius: 8px;
-      font-size: 16px;
+      border-radius: 10px;
+      box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
     }
 
     button {
-      margin-top: 15px;
-      padding: 12px;
-      width: 100%;
-      font-size: 18px;
-      background: linear-gradient(90deg, #3a8bdc, #00d4ff, #3a8bdc);
-      background-size: 200% auto;
+      padding: 10px 20px;
+      margin-top: 10px;
       border: none;
       border-radius: 10px;
+      background-color: #333;
       color: white;
-      font-weight: bold;
       cursor: pointer;
-      transition: background-position 0.5s, transform 0.3s;
-    }
-
-    button:hover {
-      background-position: right center;
-      transform: scale(1.05);
-    }
-
-    .links {
-      margin-top: 20px;
       width: 100%;
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-      align-items: center;
     }
 
-    .links a {
-      display: block;
-      width: 100%;
+    a {
       text-align: center;
-      padding: 10px;
-      font-weight: bold;
-      border-radius: 8px;
-      color: white;
-      background: rgba(0, 204, 255, 0.2);
+      display: block;
+      margin-top: 15px;
+      color: #333;
       text-decoration: none;
-      transition: background 0.3s;
-    }
-
-    .links a:hover {
-      background: rgba(0, 204, 255, 0.4);
     }
   </style>
 </head>
 <body>
   <div class="login-box">
-    <div class="title">Smart Burme</div>
-    <form onsubmit="event.preventDefault(); login();">
-      <input type="email" id="email" placeholder="Email" required />
-      <input type="password" id="password" placeholder="Password" required />
+    <h2>Login</h2>
+    <form id="loginForm">
+      <input type="email" id="email" placeholder="Email" required>
+      <input type="password" id="password" placeholder="Password" required>
       <button type="submit">Login</button>
     </form>
-    <div class="links">
-      <a href="registration.html">New Account</a>
-      <a href="forget_password.html">Forgot Password</a>
-    </div>
+    <a href="registration.html">Create New Account</a>
+    <a href="forget_password.html">Forgot Password?</a>
   </div>
 
-  <!-- Firebase SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js"></script>
-  <script src="firebase-config.js"></script>
-  <script src="auth.js"></script>
+  <script type="module">
+    import { auth } from './auth.js';
+    import { signInWithEmailAndPassword } from 'https://www.gstatic.com/firebasejs/10.11.0/firebase-auth.js';
+
+    const loginForm = document.getElementById('loginForm');
+
+    loginForm.addEventListener('submit', (e) => {
+      e.preventDefault();
+      const email = document.getElementById('email').value;
+      const password = document.getElementById('password').value;
+
+      signInWithEmailAndPassword(auth, email, password)
+        .then((userCredential) => {
+          // ✅ Login success
+          window.location.href = 'main.html';
+        })
+        .catch((error) => {
+          alert('Login failed: ' + error.message);
+        });
+    });
+  </script>
 </body>
 </html>
