--- a/login.html
+++ b/login.html
@@ -1,98 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Login</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Smart Burme - Login</title>
   <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
-      margin: 0;
-      padding: 0;
-      background: linear-gradient(135deg, #ff6b6b, #f8e473);
-      font-family: Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
+      background: linear-gradient(-45deg, #262626, #000000, #1a1a1a, #0d0d0d);
+      background-size: 400% 400%;
+      animation: backgroundShift 12s ease infinite;
+      font-family: 'Segoe UI', sans-serif;
+      color: white;
       height: 100vh;
       overflow: hidden;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
     }
 
-    .login-box {
-      background: rgba(255, 255, 255, 0.9);
-      padding: 30px;
-      border-radius: 20px;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-      animation: float 3s ease-in-out infinite;
+    @keyframes backgroundShift {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
     }
 
-    @keyframes float {
-      0% { transform: translateY(0); }
-      50% { transform: translateY(-10px); }
-      100% { transform: translateY(0); }
-    }
-
-    input {
-      display: block;
-      margin: 10px 0;
-      padding: 10px;
-      width: 100%;
-      border: none;
-      border-radius: 10px;
-      box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
-    }
-
-    button {
-      padding: 10px 20px;
-      margin-top: 10px;
-      border: none;
-      border-radius: 10px;
-      background-color: #333;
-      color: white;
-      cursor: pointer;
-      width: 100%;
-    }
-
-    a {
+    .floating-title {
+      font-size: 60px;
+      font-weight: bold;
+      animation: float3D 4s ease-in-out infinite, colorChange 6s infinite alternate;
       text-align: center;
-      display: block;
-      margin-top: 15px;
-      color: #333;
+      margin-bottom: 20px;
+    }
+
+    @keyframes float3D {
+      0% { transform: rotateY(0deg) translateY(0); }
+      25% { transform: rotateY(10deg) translateY(-10px); }
+      50% { transform: rotateY(0deg) translateY(0); }
+      75% { transform: rotateY(-10deg) translateY(10px); }
+      100% { transform: rotateY(0deg) translateY(0); }
+    }
+
+    @keyframes colorChange {
+      0% { color: #a0a0a0; }
+      50% { color: #00ccff; }
+      100% { color: #cccccc; }
+    }
+
+    .form-container {
+      margin-top: 50px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .input-field {
+      padding: 15px;
+      margin: 10px;
+      border: 2px solid #fff;
+      border-radius: 8px;
+      background-color: transparent;
+      color: white;
+      font-size: 18px;
+    }
+
+    .input-field:focus {
+      outline: none;
+      border-color: #00ccff;
+    }
+
+    .btn {
+      background: linear-gradient(90deg, #00ccff, #1e90ff);
+      background-size: 200% auto;
+      color: white;
+      padding: 15px 30px;
+      border-radius: 10px;
       text-decoration: none;
+      font-size: 18px;
+      font-weight: bold;
+      box-shadow: 0 0 15px rgba(0, 204, 255, 0.3);
+      transition: background-position 0.5s, transform 0.3s;
+      text-align: center;
+      margin-top: 20px;
+    }
+
+    .btn:hover {
+      background-position: right center;
+      transform: scale(1.05);
+    }
+
+    #loader {
+      position: absolute;
+      top: 45%;
+      font-size: 20px;
+      color: #aaa;
+    }
+
+    #main-content {
+      display: none;
+      flex-direction: column;
+      align-items: center;
     }
   </style>
 </head>
 <body>
-  <div class="login-box">
-    <h2>Login</h2>
-    <form id="loginForm">
-      <input type="email" id="email" placeholder="Email" required>
-      <input type="password" id="password" placeholder="Password" required>
-      <button type="submit">Login</button>
-    </form>
-    <a href="registration.html">Create New Account</a>
-    <a href="forget_password.html">Forgot Password?</a>
+  <div id="loader">Loading...</div>
+
+  <div id="main-content">
+    <div class="floating-title">Login to Smart Burme</div>
+
+    <div class="form-container">
+      <input type="email" class="input-field" placeholder="Email" id="email" />
+      <input type="password" class="input-field" placeholder="Password" id="password" />
+      <a href="#" class="btn" id="loginBtn">Login</a>
+      <a href="registration.html" class="btn">Register</a>
+      <a href="forget_password.html" class="btn">Forgot Password</a>
+    </div>
   </div>
 
-  <script type="module">
-    import { auth } from './auth.js';
-    import { signInWithEmailAndPassword } from 'https://www.gstatic.com/firebasejs/10.11.0/firebase-auth.js';
+  <!-- Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js"></script>
 
-    const loginForm = document.getElementById('loginForm');
+  <script>
+    // Firebase Configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyAr7Hv2ApKtNTxF11MhT5cuWeg_Dgsh0TY",
+      authDomain: "smart-burme-app.firebaseapp.com",
+      projectId: "smart-burme-app",
+      storageBucket: "smart-burme-app.appspot.com",
+      messagingSenderId: "851502425686",
+      appId: "1:851502425686:web:f29e0e1dfa84794b4abdf7"
+    };
 
-    loginForm.addEventListener('submit', (e) => {
-      e.preventDefault();
-      const email = document.getElementById('email').value;
-      const password = document.getElementById('password').value;
+    // Initialize Firebase
+    const app = firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
 
-      signInWithEmailAndPassword(auth, email, password)
+    // Handle login
+    document.getElementById("loginBtn").addEventListener("click", function(event) {
+      event.preventDefault();
+
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
+
+      // Firebase login
+      auth.signInWithEmailAndPassword(email, password)
         .then((userCredential) => {
-          // ✅ Login success
-          window.location.href = 'main.html';
+          // Redirect to main page after successful login
+          window.location.href = "main.html";
         })
         .catch((error) => {
-          alert('Login failed: ' + error.message);
+          const errorMessage = error.message;
+          alert("Error: " + errorMessage);  // Show error message if login fails
         });
     });
+
+    // Loading UI logic
+    setTimeout(() => {
+      document.getElementById('loader').style.display = 'none';
+      document.getElementById('main-content').style.display = 'flex';
+    }, 3000);
   </script>
 </body>
 </html>
