--- a/forget_password.html
+++ b/forget_password.html
@@ -3,110 +3,179 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Forgot Password</title>
+  <title>Forgot Password - SMART BURME</title>
   <style>
     * {
       margin: 0; padding: 0; box-sizing: border-box;
     }
 
     body {
-      background: linear-gradient(-45deg, #0d0d0d, #1a1a1a, #000000, #262626);
-      background-size: 400% 400%;
-      animation: backgroundShift 10s ease infinite;
-      color: white;
-      font-family: 'Segoe UI', sans-serif;
-      height: 100vh;
+      background: linear-gradient(120deg, #2b2e4a, #1f293a);
       display: flex;
-      flex-direction: column;
       align-items: center;
       justify-content: center;
+      overflow: hidden;
+      height: 100vh;
+      position: relative;
     }
 
-    @keyframes backgroundShift {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
+    .container {
+      background: rgba(31, 41, 58, 0.8);
+      padding: 40px;
+      border-radius: 20px;
+      box-shadow: 0 15px 25px rgba(0, 0, 0, 0.5);
+      backdrop-filter: blur(5px);
+      width: 90%;
+      max-width: 400px;
+      position: relative;
+      z-index: 10;
     }
 
-    .floating-title {
-      font-size: 48px;
-      font-weight: bold;
+    h2 {
+      color: #0ef;
+      text-align: center;
       margin-bottom: 30px;
-      animation: float3D 4s ease-in-out infinite, colorChange 6s infinite alternate;
+      font-size: 2em;
     }
 
-    @keyframes float3D {
-      0% { transform: rotateY(0deg) translateY(0); }
-      25% { transform: rotateY(10deg) translateY(-10px); }
-      50% { transform: rotateY(0deg) translateY(0); }
-      75% { transform: rotateY(-10deg) translateY(10px); }
-      100% { transform: rotateY(0deg) translateY(0); }
+    .input-box {
+      position: relative;
+      margin: 25px 0;
     }
 
-    @keyframes colorChange {
-      0% { color: #a0a0a0; }
-      50% { color: #00ccff; }
-      100% { color: #cccccc; }
+    .input-box input {
+      width: 100%;
+      height: 50px;
+      background: transparent;
+      border: 2px solid #2c4766;
+      border-radius: 40px;
+      color: white;
+      padding: 0 20px;
+      font-size: 1em;
+      outline: none;
     }
 
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-      width: 300px;
+    .input-box label {
+      position: absolute;
+      top: 50%;
+      left: 20px;
+      transform: translateY(-50%);
+      color: #aaa;
+      pointer-events: none;
+      transition: 0.3s;
     }
 
-    input {
-      padding: 12px;
-      border: none;
-      border-radius: 8px;
-      font-size: 16px;
+    .input-box input:focus ~ label,
+    .input-box input:valid ~ label {
+      top: 1px;
+      font-size: 0.8em;
+      background: #1f293a;
+      padding: 0 6px;
+      color: #0ef;
     }
 
     .btn {
-      background: linear-gradient(90deg, #3a8bdc, #00d4ff, #3a8bdc);
-      background-size: 200% auto;
-      color: white;
+      width: 100%;
+      height: 45px;
+      background: #0ef;
+      border: none;
+      border-radius: 40px;
+      cursor: pointer;
       font-weight: bold;
-      border-radius: 8px;
-      padding: 12px;
-      text-align: center;
-      text-decoration: none;
-      transition: background-position 0.5s, transform 0.3s;
+      color: #1f293a;
+      margin-top: 10px;
     }
 
     .btn:hover {
-      background-position: right center;
-      transform: scale(1.05);
+      background: #09c;
+      box-shadow: 0 0 15px #0ef;
     }
 
-    .login-link {
-      margin-top: 10px;
-      text-align: center;
+    .floating {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      z-index: 0;
     }
 
-    .login-link a {
-      color: #00d4ff;
-      text-decoration: none;
+    .floating span {
+      position: absolute;
+      display: block;
+      width: 20px;
+      height: 20px;
+      background: rgba(0, 255, 255, 0.2);
+      animation: float 25s linear infinite;
+      border-radius: 50%;
+    }
+
+    @keyframes float {
+      0% {
+        transform: translateY(0) rotate(0deg);
+        opacity: 1;
+      }
+      100% {
+        transform: translateY(-1000px) rotate(720deg);
+        opacity: 0;
+      }
+    }
+
+    .floating span:nth-child(1) {
+      left: 25%;
+      width: 60px;
+      height: 60px;
+      animation-duration: 20s;
+    }
+
+    .floating span:nth-child(2) {
+      left: 10%;
+      width: 30px;
+      height: 30px;
+      animation-duration: 15s;
+    }
+
+    .floating span:nth-child(3) {
+      left: 70%;
+      width: 20px;
+      height: 20px;
+      animation-duration: 18s;
+    }
+
+    .floating span:nth-child(4) {
+      left: 40%;
+      width: 50px;
+      height: 50px;
+      animation-duration: 22s;
+    }
+
+    .floating span:nth-child(5) {
+      left: 85%;
+      width: 25px;
+      height: 25px;
+      animation-duration: 17s;
     }
   </style>
 </head>
 <body>
 
-  <div class="floating-title">Reset Password</div>
+  <div class="floating">
+    <span></span><span></span><span></span><span></span><span></span>
+  </div>
 
-  <form id="resetForm">
-    <input type="email" id="email" placeholder="Enter your email" required />
-    <button type="submit" class="btn">Send Reset Email</button>
-  </form>
-
-  <div class="login-link">
-    Back to <a href="login.html">Login</a>
+  <div class="container">
+    <h2>Reset Password</h2>
+    <form id="resetForm">
+      <div class="input-box">
+        <input type="email" id="email" required>
+        <label for="email">Gmail</label>
+      </div>
+      <button class="btn" type="submit">Send Reset Email</button>
+    </form>
   </div>
 
   <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
-    import { getAuth, sendPasswordResetEmail } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js";
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+    import { getAuth, sendPasswordResetEmail } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyAr7Hv2ApKtNTxF11MhT5cuWeg_Dgsh0TY",
@@ -134,5 +203,6 @@
         });
     });
   </script>
+
 </body>
 </html>
