--- a/main.html
+++ b/main.html
@@ -1,3 +1,5 @@
-<a href="https://github.com/Smartburme/ai" target="_blank">
-  Visit SmartBurme AI on GitHub
-</a>
+<footer>
+  <p>&copy; 2025 SmartBurme AI | 
+    <a href="https://github.com/Smartburme/ai" target="_blank">GitHub Repo</a>
+  </p>
+</footer>
