--- a/main.html
+++ b/main.html
@@ -1,5 +1,5 @@
 <footer>
   <p>&copy; 2025 SmartBurme AI | 
-    <a href="https://github.com/Smartburme/ai" target="_blank">GitHub Repo</a>
+    <a href="https://github.com/Smartburme/ai/index.html" target="_blank">GitHub Repo</a>
   </p>
 </footer>
