--- a/main.html
+++ b/main.html
@@ -1,5 +1,125 @@
-<footer>
-  <p>&copy; 2025 SmartBurme AI | 
-    <a href="https://github.com/Smartburme/ai/index.html" target="_blank">GitHub Repo</a>
-  </p>
-</footer>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Smart Burme - Login</title>
+  <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body {
+      background: linear-gradient(-45deg, #0d0d0d, #1a1a1a, #000000, #262626);
+      background-size: 400% 400%;
+      animation: backgroundShift 12s ease infinite;
+      font-family: 'Segoe UI', sans-serif;
+      color: white;
+      height: 100vh;
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+
+    @keyframes backgroundShift {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
+    .floating-title {
+      font-size: 48px;
+      font-weight: bold;
+      animation: float3D 4s ease-in-out infinite, colorChange 6s infinite alternate;
+      margin-bottom: 30px;
+      text-align: center;
+    }
+
+    @keyframes float3D {
+      0% { transform: rotateY(0deg) translateY(0); }
+      25% { transform: rotateY(10deg) translateY(-10px); }
+      50% { transform: rotateY(0deg) translateY(0); }
+      75% { transform: rotateY(-10deg) translateY(10px); }
+      100% { transform: rotateY(0deg) translateY(0); }
+    }
+
+    @keyframes colorChange {
+      0% { color: #a0a0a0; }
+      50% { color: #00ccff; }
+      100% { color: #cccccc; }
+    }
+
+    .form-container {
+      background-color: rgba(0, 0, 0, 0.7);
+      padding: 40px;
+      border-radius: 15px;
+      width: 300px;
+      display: flex;
+      flex-direction: column;
+      box-shadow: 0 0 15px rgba(0, 204, 255, 0.3);
+    }
+
+    .form-container input {
+      background-color: #222;
+      border: none;
+      border-radius: 10px;
+      color: #fff;
+      padding: 14px;
+      margin-bottom: 15px;
+      font-size: 16px;
+      box-shadow: inset 0 0 5px rgba(0,204,255,0.2);
+    }
+
+    .form-container input:focus {
+      outline: none;
+      border: 2px solid #00ccff;
+    }
+
+    .btn {
+      background: linear-gradient(90deg, #3a8bdc, #00d4ff, #3a8bdc);
+      background-size: 200% auto;
+      color: white;
+      padding: 12px;
+      border-radius: 10px;
+      font-size: 18px;
+      font-weight: bold;
+      cursor: pointer;
+      border: none;
+      transition: 0.3s;
+      margin-top: 10px;
+    }
+
+    .btn:hover {
+      background-position: right center;
+      transform: scale(1.05);
+    }
+
+    .links {
+      margin-top: 20px;
+      text-align: center;
+    }
+
+    .links a {
+      color: #00ccff;
+      text-decoration: none;
+      margin: 5px;
+      display: block;
+    }
+
+    .links a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  <div class="floating-title">Smart Burme Login</div>
+  <div class="form-container">
+    <input type="email" placeholder="Enter your email" />
+    <input type="password" placeholder="Enter your password" />
+    <button class="btn">Login</button>
+    <div class="links">
+      <a href="registration.html">Don't have an account? Register</a>
+      <a href="forget_password.html">Forgot Password?</a>
+    </div>
+  </div>
+</body>
+</html>
