--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
     }
 
     .floating-title {
-      font-size: 60px;
+      font-size: 50px;
       font-weight: bold;
       animation: float3D 4s ease-in-out infinite, colorChange 6s infinite alternate;
       text-align: center;
@@ -48,7 +48,7 @@
       100% { color: #cccccc; }
     }
 
-    .form-container {
+    form {
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -59,7 +59,7 @@
       box-shadow: 0 0 10px rgba(0, 204, 255, 0.3);
     }
 
-    .form-container input {
+    input {
       background-color: #333;
       color: white;
       border: none;
@@ -71,7 +71,7 @@
       box-shadow: 0 0 5px rgba(0, 204, 255, 0.3);
     }
 
-    .form-container input:focus {
+    input:focus {
       outline: none;
       border: 2px solid #00ccff;
     }
@@ -82,13 +82,13 @@
       color: white;
       padding: 15px 30px;
       border-radius: 10px;
-      text-decoration: none;
       font-size: 18px;
       font-weight: bold;
       box-shadow: 0 0 15px rgba(0, 204, 255, 0.3);
       transition: background-position 0.5s, transform 0.3s;
       text-align: center;
       margin-top: 15px;
+      cursor: pointer;
     }
 
     .btn:hover {
@@ -113,27 +113,21 @@
     .links a:hover {
       text-decoration: underline;
     }
-
   </style>
 </head>
 <body>
   <div class="floating-title">Smart Burme</div>
-  <div class="form-container">
-    <input type="email" id="email" placeholder="Email" />
-    <input type="password" id="password" placeholder="Password" />
-    <a href="#" class="btn" id="loginBtn">Login</a>
-  </div>
+  <form id="loginForm">
+    <input type="email" id="email" placeholder="Email" required />
+    <input type="password" id="password" placeholder="Password" required />
+    <button class="btn" type="submit">Login</button>
+  </form>
   <div class="links">
     <a href="registration.html">Don't have an account? Register</a>
     <a href="forget_password.html">Forgot password?</a>
   </div>
 
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js"></script>
-  <script src="auth.js"></script>
-  <!-- Firebase Scripts -->
   <script type="module">
-    // Firebase SDKs
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
     import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
 
@@ -149,8 +143,7 @@
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
 
-    const loginForm = document.getElementById('loginForm');
-    loginForm.addEventListener('submit', (e) => {
+    document.getElementById('loginForm').addEventListener('submit', (e) => {
       e.preventDefault();
       const email = document.getElementById('email').value;
       const password = document.getElementById('password').value;
@@ -158,13 +151,12 @@
       signInWithEmailAndPassword(auth, email, password)
         .then((userCredential) => {
           alert('Login successful!');
-          window.location.href = "main.html";
+          window.location.href = "mail.html";
         })
         .catch((error) => {
           alert("Login failed: " + error.message);
         });
     });
   </script>
-
 </body>
 </html>
