--- a/login.html
+++ b/login.html
@@ -150,7 +150,7 @@
 
       signInWithEmailAndPassword(auth, email, password)
         .then(() => {
-          window.location.href = "main.html";
+          window.location.href = "interface/main.html";
         })
         .catch((error) => {
           alert("Login failed: " + error.message);
